# thread_hijack_rp

./: .gitignore  CMakeLists.txt  CMakeSettings.json
direct/: array.c  enum.c  main.c  syscall.asm  syscall.h
iathook/: main.c
indirect/: main.c  main.h  syscall.asm  syscall.h
ntapi/: main.c  main.h  scratch.txt
winapi/: main.c  scratch.txt
